--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Most Valuable Player Award</title>
-    <link rel="stylesheet" href="/Users/henrybrown/Documents/jour352/article/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
