--- a/article/index.html
+++ b/article/index.html
@@ -9,30 +9,49 @@
 </head>
 
 <body>
-    
+
     <header>
         <h1>NBA Most Valuable Player Award</h1>
         <img src="/Users/henrybrown/Documents/jour352/html-boilerplate/nba-mvp-trophy.jpg" alt="NBA MVP Award">
     </header>
-        <section>
-            <p>
-                The NBA Most Valuable Player Award (MVP) is an annual National Basketball Association (NBA) award given since the 1955/56 season to the best performing player of the regular season. Since the 2022/23 season, winners receive the Michael Jordan Trophy, named for the five-time MVP often considered to be the greatest player in NBA history.
-            </p>
-            <p>
-                Every player who has won this award and deemed eligible for the Naismith Memorial Basketball Hall of Fame has been inducted. Kareem Abdul-Jabbar won the award a record six times.[6] He is also the only player to win the award despite his team not making the playoffs in the 1975/76 season. Both Bill Russell and Michael Jordan won the award five times, while Wilt Chamberlain and LeBron James won the award four times. Russell and James are the only players to have won the award four times in five seasons. Moses Malone, Larry Bird, Magic Johnson and Nikola Jokić each won the award three times, while Bob Pettit, Karl Malone, Tim Duncan, Steve Nash, Stephen Curry and Giannis Antetokounmpo won it twice. Russell, Chamberlain, and Bird are the only players to win the award in three consecutive years. Only two rookies have won the award: Chamberlain (1959/60) and Wes Unseld (1968/69).[9] Seven players who won MVP (combining for eleven total awards) are considered "international players" by the NBA: Hakeem Olajuwon of Nigeria,[b] Duncan of the U.S. Virgin Islands,[c] Nash of Canada,[d] Dirk Nowitzki of Germany, Antetokounmpo of Greece, Jokić of Serbia, and Embiid of Cameroon.
-            </p>
+    <section>
+        <p>
+            The NBA Most Valuable Player Award (MVP) is an annual National Basketball Association (NBA) award given
+            since the 1955/56 season to the best performing player of the regular season. Since the 2022/23 season,
+            winners receive the Michael Jordan Trophy, named for the five-time MVP often considered to be the greatest
+            player in NBA history.
+        </p>
+        <p>
+            Every player who has won this award and deemed eligible for the Naismith Memorial Basketball Hall of Fame
+            has been inducted. Kareem Abdul-Jabbar won the award a record six times.[6] He is also the only player to
+            win the award despite his team not making the playoffs in the 1975/76 season. Both Bill Russell and Michael
+            Jordan won the award five times, while Wilt Chamberlain and LeBron James won the award four times. Russell
+            and James are the only players to have won the award four times in five seasons. Moses Malone, Larry Bird,
+            Magic Johnson and Nikola Jokić each won the award three times, while Bob Pettit, Karl Malone, Tim Duncan,
+            Steve Nash, Stephen Curry and Giannis Antetokounmpo won it twice. Russell, Chamberlain, and Bird are the
+            only players to win the award in three consecutive years. Only two rookies have won the award: Chamberlain
+            (1959/60) and Wes Unseld (1968/69).[9] Seven players who won MVP (combining for eleven total awards) are
+            considered "international players" by the NBA: Hakeem Olajuwon of Nigeria,[b] Duncan of the U.S. Virgin
+            Islands,[c] Nash of Canada,[d] Dirk Nowitzki of Germany, Antetokounmpo of Greece, Jokić of Serbia, and
+            Embiid of Cameroon.
+        </p>
 
-        </section>
-        <section class="callout">
-            <h2>Unique cases</h2>
-            <p>Stephen Curry (2015/16) is the only player to have won the award unanimously. Shaquille O'Neal (1999/2000) and LeBron James (2012/13) are the only two players to have fallen one vote shy of a unanimous selection, both receiving 120 of 121 votes. Since the 1975/76 season, only three players have been named MVP for a season in which their team failed to win at least 50 regular season games—Moses Malone (twice, 1978/79 and 1981/82), Russell Westbrook (2016/17) and Nikola Jokić (2021/22).</p>
+    </section>
+    <section class="callout">
+        <h2>Unique cases</h2>
+        <p>Stephen Curry (2015/16) is the only player to have won the award unanimously. Shaquille O'Neal (1999/2000)
+            and LeBron James (2012/13) are the only two players to have fallen one vote shy of a unanimous selection,
+            both receiving 120 of 121 votes. Since the 1975/76 season, only three players have been named MVP for a
+            season in which their team failed to win at least 50 regular season games—Moses Malone (twice, 1978/79 and
+            1981/82), Russell Westbrook (2016/17) and Nikola Jokić (2021/22).</p>
 
-        </section>
-    
-        <footer>
-            <p>This article initially appeared on <a href="https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award">Wikipedia.com</a>
-            </p>
-        </footer>
+    </section>
+
+    <footer>
+        <p>This article initially appeared on <a
+                href="https://en.wikipedia.org/wiki/NBA_Most_Valuable_Player_Award">Wikipedia.com</a>
+        </p>
+    </footer>
 
 </body>
 
