--- a/business/index.html
+++ b/business/index.html
@@ -4,19 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
+    <title>Marathon Deli</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <header>
-        <img src="img/marathonlogo.png" alt="Marathon Deli Logo" class="img-fluid">
-        <nav class="nav justify-content-center"> 
+        <img src="img/mural.jpg" alt="Marathon Mural" class="img-fluid">
+        <nav class="nav justify-content-center">
             <a class="nav-link" href="#">Deli Menu</a>
             <a class="nav-link" href="#">Catering</a>
             <a class="nav-link" href="#">Story</a>
@@ -25,27 +30,28 @@
 
     <main>
         <div class="container-fluid">
-            <section class="row align-items-center"></section>
+            <section class="row align-items-center">
                 <div class="col-md-6">
                     <h2>Try our tasty gyros!</h2>
                     <p>Open until 3 a.m.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/sandwich.jpg" alt="Sandwich" class="img-fluid">
+                </div>
+            </section>
+            <section class="row align-items-center">
+                <div class="col-lg-6 col-sm-2">
+                    <img src="img/marathonentrance.jpg" alt="Mural" class="img-fluid">
+                </div>
+
+                <div class="col-lg-6">
+                    <h2>College Park's own!</h2>
+                </div>
+            </section>
         </div>
-        <div class="col-md-10">
-            <img src="img/sandwich.jpg" alt="Sandwich"
-                class="img-fluid">
-        </div>
-        <section class="row align-items-center">
-            <div class="col-lg-3 col-sm-2"> 
-                <img src="img/marathonwall.jpg" alt="Mural" class="img-fluid">
-            </div>
-            
-            <div class="col-lg-2">
-                <h2>College Park's own!</h2>
-            </div>
-        </section>
 
     </main>
-    
+
 </body>
 
 </html>
