--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,6 +21,10 @@
 <body>
     <header class="main">
         <h1>Henry J. Brown's Sportswriting Portfolio</h1>
+        <a href="#">Home</a>
+        <a href="/portfolio/resume/index.html">Resume</a>
+        <a href="/portfolio/about me/index.html">About Me</a>
+        <a href="/portfolio/contact/index.html">Contact</a>
         <img src="img/natspark.jpg" alt="Nats Park" class="img-fluid">
     </header>
 
@@ -28,7 +32,7 @@
         <section class="text_section">
             <h2>I'm a student enrolled in the Philip Merrill College of Journalism at the University of Maryland, and
                 I've spent my last few years working to expand my portfolio covering sports and acting as a general
-                assignment reporter. Here's some work from some of my most recent stops.</h2>
+                assignment reporter. Here's some work from some of my most recent stops:</h2>
         </section>
         <div class="container-fluid">
             <section class="row align-items-center">
@@ -63,6 +67,13 @@
                     <img src="img/shai.jpg" alt="Shai Gilgeous-Alexander" class="img-fluid">
                 </div>
             </section>
+            <p>Photo credits, in order of appearance</p>
+            <ul>
+                <li>@PovichCenter on X</li>
+                <li>Myself</li>
+                <li>Capital Gazette, taken by Paul W. Gillespie</li>
+                <li>Can't find attribution</li>
+            </ul>
         </div>
     </main>
 
